shifting AT diagrams around

--- a/_posts/thesis_chapters/2024-9-5-Design.md
+++ b/_posts/thesis_chapters/2024-9-5-Design.md
@@ -140,33 +140,12 @@ title: 5. Exploration of the Formative Learning Design Process
 This chapter contains a large number of headings in draft form. These will be replaced with introductory sentences when structure is stable.
 
 
-<!-- ## Notes on structure -->
-<!-- NOTE:
-Moved impact of software tools here - and overall on templated approach on a micro level  -  which therefore becomes less of this study's focus - and needs less evidence -->
 
-<!-- - drawing mostly on my journal notes and the evolution of the tools and design themselves.   -->
-
-<!-- - **Interviews (and Lit review ):** exposes motivations and barriers to undertaking activity  this domain from interviews with peer practitioners and literature review -->
-
-<!-- However in terms of tensions - there is one on cultural tensions - this may need moving to the next chapter - a more thematic approach. -->
-
-<!-- Also the practitioner interviews - could be a bit disjointed - as they do relate to cultural barriers and tactics. But could say those are explored in other chapters. DONE -->
 
 
 ## Chapter Introduction  
 
-<!-- - exposes motivations, tactics for and barriers to undertaking activity this domain from interviews with peer practitioners (supplementing the literature review) -->
 
-<!-- I am guided in this respect by the lineage of research of constructionism, and in particular the sharing of practice between researchers and teachers regarding the use of LOGO. A seminal example of this practice is Papert and Solomon's publication Twenty things to do with a computer which is replete with code examples and diagrams of their output on the screen [-@papert_twenty_1971]. Many such examples exist from Papert in published memos and grass-roots collaborations with teachers [^4]. -->
-
-<!-- ---
-NOTE
----
-
-I originally structured the chapter around observations structured in the phases described in chapter three. This approach proved over-complicated, mixing the description of tensions which often spanned multiple phases.
-
---- -->
-<!-- Due to the novel nature of the learning design, a detailed outline of the specifics of the participants experience of the design helps readers situate  the findings of the following two chapters. -->
 
 
 This chapter contains a high level of detail on the evolution of the learning design to situate the findings of the next chapters and to allow the design to be by other practitioners and researchers in this area. The format of this chapter can be conceived as a design narrative [@hoadley_creating_2002-1]. To do to this I include narrative descriptions of shifts between phases of design as it mutually evolved over time. The concept of design narrative emerged within DBR as a way to communicate the important detail of context [@hoadley_creating_2002-1; @brase_knowledge_2024; @bell_theoretical_2004]. Whie DBR uses varied  _language of argumentation_ [@brase_knowledge_2024], this chapter use the _language of argumentation_  provided by third generation activity theory (3GAT) (e.g. the analytical lenses of double stimulation and rising to the concrete). In particular, the evolution of the key pedagogical features is analysed via  emerging tensions between system elements in learning design. Exploration of the shifts in the design of the intervention is done via a development of a design narrative which explores the driving forces behind changes in the design of each phase.
@@ -175,46 +154,20 @@ This wider focus requires that I move beyond a merely technical approach to inco
 
 In the previous chapter, I described phases of delivery of the formative intervention in the form of a family game making programme.
 
-WHERE TO PUT THIS?
-I described activity by identifying activity units/systems, system elements.
+To begin this chapter I described activity by identifying activity units/systems, system elements typical at early phases of the design, with a particular focus on the transformations happening in the object of the activity systems.
 
-
-This narrative is enriched by more in-depth analysis of three key areas of emerging areas of contradictions in activity and resultant interventions which addressed those contradictions. The three main areas of contradictions are explored in this chapter are as follows: in use of software tool use in P1 and P2, those associated with project navigation and the use of supporting documentation in P2, and finally contradictions surrounding identity in of the game making activity.
+This narrative is enriched by more in-depth analysis of three key areas of emerging areas of contradictions in activity and resultant interventions which addressed those contradictions. The three main areas of contradictions are explored in this chapter are as follows: in use of software tool use in P1 and P2, those associated with project navigation and the use of supporting documentation in P2, and finally contradictions surrounding participant identity within the game making activity.
 
 The discussion section of this chapter includes a synthesis of key initial barriers to engaging this game making program and the resultant responses. A final section identifies game design patterns (GDPs) as a "germ cell" concept that emerged in several forms in the evolution of the learning design.
 
 
-
-
 ## Analysis of dimensions of game making activity using 3GAT framework
-
-<!--
-#### Code Playgrounds
-Find definition
-NOTES ON CODE PLAYGROUNDS
-However in its styling it is playful and editorial picks and write up celebrate a playful spirit of creativity and sharing. There are strong parallels in this presentation to that Scratch community and to the sharing ethos integral to the maker-movement (explored in Lit Review). The interplay between play and work via shared experimentation is developed further in a later discussion chapter.
-#### Online graphics editors - Piskel -->
-
-
-
-<!-- The tool shown in screenshots is the code playground glitch (see chapter 2 and glossary). -->
-
 
 In line with the process outlined in chapter three, the following sections outline different scopes of activity to introduce tensions between system elements which are explored in this chapter.
 
-<!-- I use concepts from activity theory to describe elements of the activity system and identify intersecting or nested systems of activity and their differing goals. -->
-
-<!-- The following sections describe of the vignette above focusing on the overall activity and its place within evolution of learning design.
-Subsequent analysis of the identified activity systems allows both the researcher and practitioner to identifying existing and emerging tensions and to thus observe (spontaneous) or plan (designed) responses. While this chapter focuses primarily on the tools and resources, future chapter also draw on this framework for wider analysis. -->
-<!-- ALTERNATIVE SIMPLIER INTRO TO THIS SECTION -->
-
-<!-- Each section follows a pattern: the activity is described in general, then examples of activity at that scope from the vignette above are described, ending with brief analysis or signposting to where the activity in explored in greater depth. -->
+### Environmental factors and objectives
 
 <!-- The following descriptions mirror the work of AT researchers who conceptualise scope of activity as concentric circles from Broffennbrenner with "larger" scopes of cultural and societal goals and smaller, narrower, lower scopes of more personal activity [Engestrom][Cole]. -->
-
-<!-- A short description of the activity systems follows the vignette above to help the reader establish a broad understanding of the processes involved before further analysis. I signpost the reader to other chapters when the described activity is explored in more detail there. -->
-
-### Environmental factors and objectives
 
 The context of the learning environment situated within wider systems of activity. Three key systems are represented in an illustration 4.x  below. The diagram is necessary simplification of contextual factors and objectives of interacting, focusing on research goals on the part of the researcher, learning computing skills and concepts as a home education project and finally a broad aim of fun on the part of the children participants. Diverse cultural and contextual factors from the original activity systems are played out in a new shared activity system, while there is a nominal shared objective to the main activity, it the community contains diverse actors with different agendas.
 
@@ -227,52 +180,78 @@ Other relevant objectives of re include: a desire to create a useful learning ex
 
 ![Illustration 4.x - Broad Environmental Activity Systems  ](./Pictures/At_dia_3_v2.png){width=95%}
 
-The diagram is in line with Engestrom's concept of expansive learning via a shared object (explored in the chapter three) [@engestrom_expansive_2001]. In this research, I take the approach of treating this shared object as an activity system in its own right. Lecusay takes a similar approach [@lecusay_telementoring_2015] when describing an adaption to an after school program. He describes the shared object as an idiocultural hybrid which develops into its own activity system. The concept of idioculture is used in this study to deepen the description of the community dimension of 3GAT.
-
-
+The diagram is in line with Engestrom's concept of expansive learning via a shared object (explored in the chapter three) [@engestrom_expansive_2001]. In this research, I take the approach of treating this shared object as an activity system in its own right. Lecusay [@lecusay_telementoring_2015] applies a similar approach when describing an adaption to an after school program. He describes the shared object as an idiocultural hybrid which develops into its own activity system.
+DEVELOP
 <!-- NOTE - WHY IS THE CONCEPT OF IDEOCULTURE USEFUL HERE? -->
 
-<!-- NOTE - CAN ADD THE OBJECTIVES / LEADING ACTIVITIES INTO THE ARROWS ON THE DIAGRAM -->
-<!-- While the limited example above of Toby's activity illustrates fun, additional data from interviews with this child and family back the broad goals above. [develop - perhaps an appendix or quotes] -->
+<!-- The concept of idioculture is used in this study to deepen the description of the community dimension of 3GAT. -->
 
-<!-- As previously explored this mirrors the Activity, Action and Operation hierarchy. -->
-
-
-<!-- | **Subject**         | **Objective**             | **Tools & Processes**          |
-|------|-------------|------------|
-| Community of novice game makers | Creating a game which is fun to play and communi**Phase one:** In response to need, I adapted a starting code template of a platform game and created various code examples to add functionality requested by participants. This template was adapted from an online tutorial to create a game of the _platformer_ genre  (see glossary), a move which helped to limit expectations of the technical complexity of their game. At the end of this stage participants showcased their games to students in the foyer of the MMU Brooks building.cates an environmental theme     | Shared log in to code playground (glitch.com)   |
-|   |      | Shared log in to graphic editor (Piskel)    |
-|   |      | Instructions from facilitator including the overall mission   |
-|   |      | Starting game template    |
-|   |      | Group playtesting     |
-|        |     |
-
-Table 4.x.  Tools used in larger-scoped objective involving the wider community of notice coders collectively making separate games. -->
 
 
 Following Barab's description of nested activity systems [-@barab_using_2002], this shared system, whose objective is to make a games for an audience to play,  can be seen not only as nested within the wider systems but also as a container for  other  activity systems nested with that. While this overall approach is considered valid [FIND OTHER SUPPORT], the danger of fragmenting activity to much is to make matters confusing. The job of the researcher is to prioritise systems to describe and analyse based on the area of study and the concerns of the participants. This prioritisation in AT is sometimes conceptualised as the process of finding a key units of analysis. In the process of research I have found two units of activity particularly illuminating, one being the shared activity system described above of making a game in a community process. The other, narrower in scope can be described as implementing individual game features. Beyond these key systems, I draw on the concepts of actions and operations within systems to describe tensions and contradictions which emerge in the research process [-@leontiev_activity_2009].
 
 <!-- GDPs ( conceptualised here as game design patterns), which while often implemented on an individual or pair scope, were also fed back into community activity.  -->
 
-###  Activity system 1 - a novice game making community making games as a learning experience
+###  Activity system 1 - an emerging community of novice game makers community making games as a learning experience
+
+<!-- NOTE - Get into difference between object / objective and outcomes -->
+
+<!-- While the limited example above of Toby's activity illustrates fun, additional data from interviews with this child and family back the broad goals above. [develop - perhaps an appendix or quotes] -->
+
+<!-- As previously explored this mirrors the Activity, Action and Operation hierarchy. -->
 
 
-<!-- NOTE - what is the difference between objective and outcome -->
+This scope of activity takes as a subject the community of individuals in the room as during the game making sessions. this includes parents, children, student helpers and myself as a researcher / facilitator. As explored in Chapter 3 and 4 the object of the activity shifted in early stages in P1 and P2, as the community at times needed to shift attention not only the construction of a game but also to the evolving group process and pedagogy to enable successful completion of the game coding project(s).
 
-<!-- Insert an AT diagram from here - https://docs.google.com/presentation/d/1vR6dzFG6qXIdpB_-s6PbCePiB87qTs6YAXCljxNcb5Y/edit#slide=id.g57b5e8e9ad_0_0 -->
+![Illustration 4.x - Larger game making activity system  ](./Pictures/At_dia_1_v3.png){width=95%}
 
-
-![Illustration 4.x - Larger game making activity system  ](./Pictures/At_dia_1_v1.png){width=95%}
-
-
+IS THIS RELEVANT HERE?
 There are diverse end audiences for the games. The final target audience are students and staff in the Manchester Met Brooks building where the created games are shared in arcade cabinets at the end of the programme. An additional audience are friends and family who can be send the games to play online. The more immediate audience for the evolving games are peer game makers during the making sessions.
 
 ![Carrot eater game with an self made arcade unit made from cardboard boxes](./Pictures/carroteater3.jpg){width=90%}
 
 While the broad aim of making a game to share is agreed through participation, there are also diverse motivations stemming from environmental factors in the interrelated actors in this activity which feed into the contradictions which emerge at this level of activity.
 
-#### Illustrative vignette on participants activity indicating general activity of participants
+<!-- IS THIS NEEDED? While the programme had a shared objective of making a game, there were tensions brought by the cultural factors and other objectives imported from other activity systems. The third contradiction explored in this chapter explores those tensions (including? ....). -->
 
+<!--
+NOTE - More on large scope in AT terms? What is needed here? -->
+
+
+### Activity system 2 -  Constructing a game feature by feature
+
+This scope of activity takes an individual or parent/child paring as its subject.
+
+Within the activity system of making a game, in analysis of video data and evolution of course resources from P2 onwards, I identified activity happening at an individual or pair work which emerged with distinctive characteristics.
+
+Activity was driven by learners setting goals, requesting help and then implement code structures based around altering or adding new features to the game using tools available in the learning environment. Participants also worked on audio and graphical assets to achieve this  objective.
+
+While is it possible, aligning with Levontev, to identify the implementation of features as actions within the wider activity, there is value in  treating of implementing each GDP as a sub-project or activity systems in its own right ( NOTE - or at least as as a key unit of analysis). Barab and colleagues justify smaller units in their study observing emerging practices in a technology rich learning environment [@barab_using_2002].
+QUOTE?
+
+
+![Mid-level activity system of game making](./Pictures/At_dia_2_v1.png){width=95%}
+
+<!-- One observation from he experimental course was that without signific
+
+**Phase one:** In response to need, I adapted a starting code template of a platform game and created various code examples to add functionality requested by participants. This template was adapted from an online tutorial to create a game of the _platformer_ genre  (see glossary), a move which helped to limit expectations of the technical complexity of their game. At the end of this stage participants showcased their games to students in the foyer of the MMU Brooks building.
+
+ant support, the process of making a game is complex and there are many possible blockages in the process. -->
+
+<!-- NOTE - THIS IS ANALYSIS  -WHERE TO PLACE IT?
+By this stage, the process of collecting a user generated list of features and trying to respond to all of them as a facilitator had been abandoned as unrealistic. -->
+
+<!-- NOTE - how much from p1-4 below to include? -->
+
+<!-- In the example above Toby progresses from playtesting his own game to altering it. The code to change the layout of the platforms of the game is already included in the starting template. Thus is able add a new platform by making simple code changes. Toby retests the game immediately by clicking on the preview element of the code environment.  -->
+
+<!-- However within that wider objective there may be a variety of goals depending on the participant. In this case Toby's goal is addresses the challenge and variety of the game playing experience. -->
+
+<!-- Toby builds his competence in the process of comparing the own code to the code example to work out what code is new and relevant to the desired behaviour. -->
+
+<!-- In the vignette of Toby's activity this wider objective is present in the facilitator orientation at the start which references this audience -  _the Monday after we can play our games and we can share them with students. We can make the students frustrated when they can’t beat our games_. At the end of the vignette text, one of the student helpers also imagines this audience playing the game of Toby.    -->
+
+**Illustrative vignette on participants activity indicating general activity of participants**
 
 The purpose of this vignette is to illustrate some of the key features of the overall game making activity in relation to activity systems and relevant system elements. (included as an appendix of this chapter as Appendix 4.a -
 
@@ -288,52 +267,6 @@ While this vignette shows that the participant has developed fluid use of both s
 The later section of the vignette shows evidence of elements of an emerging idioculture of this group. A student helper shares a question -  "Is yours the one where level one is harder than level three?". This is indicative of some of the emerging playful approaches that younger participants in particular are taking to the overall process. This represents an example of the influence of the wider systems of play of on the shared idioculture of the game making community. The complexities of processes to create and to help resolve contradictions as this cultural domain of collective making are explored later in this chapter.
 
 
-<!-- IS THIS NEEDED? While the programme had a shared objective of making a game, there were tensions brought by the cultural factors and other objectives imported from other activity systems. The third contradiction explored in this chapter explores those tensions (including? ....). -->
-
-
-<!-- In the vignette of Toby's activity this wider objective is present in the facilitator orientation at the start which references this audience -  _the Monday after we can play our games and we can share them with students. We can make the students frustrated when they can’t beat our games_. At the end of the vignette text, one of the student helpers also imagines this audience playing the game of Toby.    -->
-<!--
-NOTE - More on large scope in AT terms? What is needed here? -->
-
-
-### Activity system 2 -  Constructing a game feature by feature
-
-Within the activity system of making a game, in analysis of video data and evolution of course resources from P2 onwards, I identified activity happening at an individual or pair work which emerged with distinctive characteristics.
-
-Activity was driven by learners setting goals, requesting help and then implement code structures based around altering or adding new features to the game using tools available in the learning environment. Participants also worked on audio and graphical assets to achieve this  objective.
-
-While is it possible, aligning with Levontev, to identify the implementation of features as actions within the wider activity, there is value in  treating of implementing each GDP as a sub-project or activity systems in its own right ( NOTE - or at least as as a key unit of analysis). Barab and colleagues justify smaller units in their study observing emerging practices in a technology rich learning environment [@barab_using_2002].
-QUOTE?
-
-
-
-<!-- | Subject         | Objective             | Tools & Processes          |
-|------|-------------|------------|
-| Groups or individual participants | Implementing game elements   | Code editing tool (glitch)   |
-|   |   |  Game preview tool (glitch) |
-|   |   |  Menu of game patterns at ggc-examples.glitch.me  |
-|   |   |  Step by step tutorials on FLOSS manuals  |
-|   |   |  Playtesting own game |
-|        |     |
-
-Table 4.x.  Tools used in mid-level objectives when selecting and planning implementation of game elements. -->
-
-![Mid-level activity system of game making](./Pictures/At_dia_2_v1.png){width=95%}
-
-<!-- One observation from he experimental course was that without signific**Phase one:** In response to need, I adapted a starting code template of a platform game and created various code examples to add functionality requested by participants. This template was adapted from an online tutorial to create a game of the _platformer_ genre  (see glossary), a move which helped to limit expectations of the technical complexity of their game. At the end of this stage participants showcased their games to students in the foyer of the MMU Brooks building.
-
-ant support, the process of making a game is complex and there are many possible blockages in the process. -->
-
-<!-- NOTE - THIS IS ANALYSIS  -WHERE TO PLACE IT?
-By this stage, the process of collecting a user generated list of features and trying to respond to all of them as a facilitator had been abandoned as unrealistic. -->
-
-<!-- NOTE - how much from p1-4 below to include? -->
-
-<!-- In the example above Toby progresses from playtesting his own game to altering it. The code to change the layout of the platforms of the game is already included in the starting template. Thus is able add a new platform by making simple code changes. Toby retests the game immediately by clicking on the preview element of the code environment.  -->
-
-<!-- However within that wider objective there may be a variety of goals depending on the participant. In this case Toby's goal is addresses the challenge and variety of the game playing experience. -->
-
-<!-- Toby builds his competence in the process of comparing the own code to the code example to work out what code is new and relevant to the desired behaviour. -->
 
 Game design patterns emerged as a shared object as described by Engestrom in []. The object of activity here is not only the code and game assets which participants are working on. In addition the emerging concept and group understanding of the game design pattern becomes a share understanding on a community level as playtesing, pair work and peer help happens.
 
@@ -361,18 +294,7 @@ A later section of this chapter details the different supporting documentation g
 
 <!-- Other participants were less proficient using this online resources and used printed out versions of documentation. -->
 
-<!-- In the next section narrower actions still within this system are explored as discreet actions which combine to be come the activity of implementing a game pattern. -->
 
-<!-- | **Subject**         | **Objective**             | **Tools & Processes**         
-|----------------|-----------|------------|
-| Individuals (mostly)  | Implementing specific code or design tasks   |  Code editing tool (glitch)   |
-|   |   |  Code game preview tool (glitch) |
-|   |   |  Piskel  online graphics editor   |
-|   |   |  Step by step tutorials on FLOSS manuals  |
-|   |   |  Stand-alone code examples on glitch.com  |
-|        |     | -->
-
-<!-- Table 4.x.  Tools used in lower-level objectives of implementing specific code structures or stages in creating game assets -->
 
 #### Operations and actions within the system - Implementing discrete code and design structures
 
@@ -1059,12 +981,20 @@ The process of theming the patterns has the potential to develop the community k
 
 The framework youth game jams and in the Q2L school to help participants develop their implicit knowledge of game design concepts in to explicit share vocabulary before engaging in digital making via collaborative analysis of common games [@cornish_game_2018; @institute_of_play_gamestar_nodate]. Similarly, in early stages of my design participants completed a similar activity after playing retro arcade games [included in appendix].
 
-I related this simple categorisation the emerging list of requests for game features made by my participants.
+I related this simple categorisation the emerging list of requests for game features made by my participants. The final categorisation used in P4 is included as a Table 5.x below.
+
 
 | **Game Mechanics**| **Game Polish** | **Game Space** | **Challenge Systems**|         
 |--------|------------|--------------|----------|
-| Jumping on Enemies  | polish. |  New levels | New levels |
+| Add Static Hazard  | Add Graphical Effects | Change Design of Levels | Gain Points when Collecting Food |
+| Add an Animated Enemy  | Add Sound Effects | Add More Levels | Add a Timer |
+| Jump on Enemy to Zap them  | Add a Sound Track (Music) | Change Shape of Levels | Collect all Food before Progressing |
+| Double Jump  | Add a Game Story with Messages | Change the Background Image | Power up - Higher Jump |
+| Moving / Patrolling Enemies  | Add a Game Story with Messages | Change the Background Image | Power up - Player Speed |
+| Moving / Following Enemies  | Animate your Player’s Movements | Key and Door | Random Doubling Enemies |    
+|   | Make Player Immune |  | |    
 
+Table 5.x Categorisation of game design patterns used in P4.
 
 This categorisation, while simplified, is consistent with professional and technical frameworks popular in game making communities including: the MDA framework [@olsson2014conceptual] (which focuses on analysis of games based on the user experience), Elemental Tetrad [@schell_art_2008], and DDE [@korn_design_2017]. The theme of using technical frameworks in an accessible way to facilitate the creations of novice participants is continued in the chapters five and six.  
 
@@ -1928,3 +1858,80 @@ For example, the use of CT concepts in a framework, listed as part of the initia
 [^18]: https://mozdevs.github.io/html5-games-workshop/en/guides/platformer/the-game-loop/ -->
 
 Gilbert is the worsted name.
+
+
+## Removed NOTES
+
+<!--
+#### Code Playgrounds
+Find definition
+NOTES ON CODE PLAYGROUNDS
+However in its styling it is playful and editorial picks and write up celebrate a playful spirit of creativity and sharing. There are strong parallels in this presentation to that Scratch community and to the sharing ethos integral to the maker-movement (explored in Lit Review). The interplay between play and work via shared experimentation is developed further in a later discussion chapter.
+#### Online graphics editors - Piskel -->
+
+<!-- ## Notes on structure - THESE WOULD NOW FIT BETTER IN CHAPTER 4 -->
+<!-- NOTE:
+Moved impact of software tools here - and overall on templated approach on a micro level  -  which therefore becomes less of this study's focus - and needs less evidence -->
+
+<!-- - drawing mostly on my journal notes and the evolution of the tools and design themselves.   -->
+
+<!-- - **Interviews (and Lit review ):** exposes motivations and barriers to undertaking activity  this domain from interviews with peer practitioners and literature review -->
+
+<!-- However in terms of tensions - there is one on cultural tensions - this may need moving to the next chapter - a more thematic approach. -->
+
+<!-- Also the practitioner interviews - could be a bit disjointed - as they do relate to cultural barriers and tactics. But could say those are explored in other chapters. DONE -->
+
+<!-- - exposes motivations, tactics for and barriers to undertaking activity this domain from interviews with peer practitioners (supplementing the literature review) -->
+
+<!-- I am guided in this respect by the lineage of research of constructionism, and in particular the sharing of practice between researchers and teachers regarding the use of LOGO. A seminal example of this practice is Papert and Solomon's publication Twenty things to do with a computer which is replete with code examples and diagrams of their output on the screen [-@papert_twenty_1971]. Many such examples exist from Papert in published memos and grass-roots collaborations with teachers [^4]. -->
+
+
+<!-- A short description of the activity systems follows the vignette above to help the reader establish a broad understanding of the processes involved before further analysis. I signpost the reader to other chapters when the described activity is explored in more detail there. -->
+
+<!-- I use concepts from activity theory to describe elements of the activity system and identify intersecting or nested systems of activity and their differing goals. -->
+
+<!-- The following sections describe of the vignette above focusing on the overall activity and its place within evolution of learning design.
+Subsequent analysis of the identified activity systems allows both the researcher and practitioner to identifying existing and emerging tensions and to thus observe (spontaneous) or plan (designed) responses. While this chapter focuses primarily on the tools and resources, future chapter also draw on this framework for wider analysis. -->
+<!-- ALTERNATIVE SIMPLIER INTRO TO THIS SECTION -->
+
+
+
+<!-- | **Subject**         | **Objective**             | **Tools & Processes**          |
+|------|-------------|------------|
+| Community of novice game makers | Creating a game which is fun to play and communi**Phase one:** In response to need, I adapted a starting code template of a platform game and created various code examples to add functionality requested by participants. This template was adapted from an online tutorial to create a game of the _platformer_ genre  (see glossary), a move which helped to limit expectations of the technical complexity of their game. At the end of this stage participants showcased their games to students in the foyer of the MMU Brooks building.cates an environmental theme     | Shared log in to code playground (glitch.com)   |
+|   |      | Shared log in to graphic editor (Piskel)    |
+|   |      | Instructions from facilitator including the overall mission   |
+|   |      | Starting game template    |
+|   |      | Group playtesting     |
+|        |     |
+
+Table 4.x.  Tools used in larger-scoped objective involving the wider community of notice coders collectively making separate games. -->
+
+
+
+
+<!-- | Subject         | Objective             | Tools & Processes          |
+|------|-------------|------------|
+| Groups or individual participants | Implementing game elements   | Code editing tool (glitch)   |
+|   |   |  Game preview tool (glitch) |
+|   |   |  Menu of game patterns at ggc-examples.glitch.me  |
+|   |   |  Step by step tutorials on FLOSS manuals  |
+|   |   |  Playtesting own game |
+|        |     |
+
+Table 4.x.  Tools used in mid-level objectives when selecting and planning implementation of game elements. -->
+
+
+
+<!-- In the next section narrower actions still within this system are explored as discreet actions which combine to be come the activity of implementing a game pattern. -->
+
+<!-- | **Subject**         | **Objective**             | **Tools & Processes**         
+|----------------|-----------|------------|
+| Individuals (mostly)  | Implementing specific code or design tasks   |  Code editing tool (glitch)   |
+|   |   |  Code game preview tool (glitch) |
+|   |   |  Piskel  online graphics editor   |
+|   |   |  Step by step tutorials on FLOSS manuals  |
+|   |   |  Stand-alone code examples on glitch.com  |
+|        |     | -->
+
+<!-- Table 4.x.  Tools used in lower-level objectives of implementing specific code structures or stages in creating game assets -->
